--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  font-family:arial;
  font-size:15px;
  text-align:center;
- color:#fffffff;
+ color:#ffffff;
  background-color:#000000;
 }
    
@@ -56,7 +56,7 @@
 
      p {
 	font-family:arial;
-	color:#000000
+	color:#ffffff;
 }
 		 </style>
 					
